--- a/mm-cgminer/Config.in
+++ b/mm-cgminer/Config.in
@@ -1,6 +1,6 @@
-config MM_TOOLS_SOFT_CRC
+config MM_CGMINER_SOFT_CRC
 	bool "Enable soft crc algorithm"
 	default n
-config MM_TOOLS_FLASH_LAYOUT_2M
+config MM_CGMINER_FLASH_LAYOUT_2M
 	bool "Enable flash layout 2m"
 	default n
