--- a/xc3sprog/Makefile
+++ b/xc3sprog/Makefile
@@ -1,15 +1,19 @@
+
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=xc3sprog
-PKG_REV:=742
-PKG_VERSION:=r$(PKG_REV)
+PKG_REV:=795
+PKG_VERSION:=$(PKG_REV)
 PKG_RELEASE:=1
 
-PKG_SOURCE=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=https://svn.code.sf.net/p/xc3sprog/code/trunk
+PKG_SOURCE=$(PKG_NAME)-$(PKG_VERSION).tar.bz2
+PKG_SOURCE_URL:=https://svn.code.sf.net/p/xc3sprog/code/trunk/
+HASH:=SKIP
+PKG_HASH:=7678fcad24b4b33533d069abc15d0df108fc330150e9bbd94234155c8c157f6e
+PKG_MIRROR_HASH:=4b73fd227f5a29d9fbdf90973663433976bca32cccff4768cb5f9367f968a4a7
+
 PKG_SOURCE_PROTO:=svn
-PKG_SOURCE_VERSION=$(PKG_REV)
-PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
+PKG_SOURCE_VERSION:=$(PKG_REV)
 
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/cmake.mk
@@ -18,22 +22,19 @@ define Package/xc3sprog
 	SECTION:=utils
 	CATEGORY:=Utilities
 	TITLE:=xc3sporg
-	URL:=http://xc3sprog.sourceforge.net/
 	DEPENDS:=+libusb-compat +libftdi +libstdcpp
 endef
 
 define Package/xc3sprog/description
-xc3sprog is a suite of utilities for programming Xilinx FPGAs, CPLDs, and EEPROMs with the Xilinx Parallel Cable and other JTAG adapters under Linux. 
+xc3sprog is a suite of utilities for programming Xilinx FPGAs, CPLDs, and EEPROMs with the Xilinx Parallel Cable and other JTAG adapters under Linux
 endef
 
 define Package/xc3sprog/install
-	$(INSTALL_DIR) $(1)/usr/bin
 
-	$(INSTALL_BIN) \
-		$(PKG_INSTALL_DIR)/usr/bin/* \
-		$(1)/usr/bin/
+	$(INSTALL_DIR)		$(1)/usr/bin
+	$(INSTALL_BIN)		$(PKG_INSTALL_DIR)/usr/bin/*	$(1)/usr/bin/
+	$(CP)				$(FILES_DIR)/*					$(1)/usr/bin
 
-	$(CP) $(FILES_DIR)/* $(1)/usr/bin
 endef
 
 $(eval $(call BuildPackage,xc3sprog))
