--- a/mm-tools/Makefile
+++ b/mm-tools/Makefile
@@ -19,7 +19,7 @@ define Package/mm-tools
 	TITLE:=mm-tools
 	SECTION:=utils
 	CATEGORY:=Utilities
-	DEPENDS:= +libpthread +udev
+	DEPENDS:= +libpthread +udev +jansson
 endef
 
 define Package/mm-tools/description
@@ -30,10 +30,10 @@ define Package/mm-tools/config
 	source "$(SOURCE)/Config.in"
 endef
 
-TARGET_LDFLAGS += -L$(STAGING_DIR)/usr/lib
+TARGET_LDFLAGS += $(STAGING_DIR)/usr/lib
 
 mm_tools_CFLAGS = $(TARGET_CC) -fcommon
-mm_tools_CFLAGS += -lusb -lusb-1.0 -ljansson
+mm_tools_CFLAGS += -ljansson -lusb-1.0
 mm_tools_CFLAGS += -I$(PKG_BUILD_DIR)/compat/jansson-2.13.1/src
 mm_tools_CFLAGS += -I$(PKG_BUILD_DIR)/compat/libusb-1.0/libusb
 
@@ -64,8 +64,8 @@ define Package/mm-tools/install
 	$(INSTALL_DIR)		$(1)/usr/lib
 
 	$(CP)		$(PKG_BUILD_DIR)/mm-tools						$(1)/usr/bin
-	$(CP)		$(STAGING_DIR)/usr/lib/libjansson.so.*			$(1)/usr/lib
-	$(CP)		$(STAGING_DIR)/usr/lib/libusb-0.1.so.*			$(1)/usr/lib
+#	$(CP)		$(STAGING_DIR)/usr/lib/libjansson.so.*			$(1)/usr/lib
+#	$(CP)		$(STAGING_DIR)/usr/lib/libusb-0.1.so.*			$(1)/usr/lib
 #	$(CP)		$(STAGING_DIR)/usr/lib/libusb-1.0.so.*			$(1)/usr/lib
 #	$(CP)		$(STAGING_DIR)/usr/lib/libudev.so.*				$(1)/usr/lib
 
